--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "date-fns": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.10.3",
-    "date-fns": "^3.3.1"
+    "resend": "^6.4.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
